ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.1.7
    • Affects Version/s: 3.0.5
    • Component/s: Geo
    • Fully Compatible
    • ALL
    • Hide
      use test
      db.test.insert({
          "_id" : ObjectId("5579e78b6b599f4d7e0ae55e"),
          "location" : {
              "type" : "Polygon",
              "coordinates" : [ 
                  [ 
                      [ 
                          -45.0000000000000000, 
                          0.0000000000000000
                      ], 
                      [ 
                          -44.8750000000000000, 
                          0.0000000000000000
                      ], 
                      [ 
                          -44.8750000000000000, 
                          0.1250000000000000
                      ], 
                      [ 
                          -45.0000000000000000, 
                          0.1250000000000000
                      ], 
                      [ 
                          -45.0000000000000000, 
                          0.0000000000000000
                      ]
                  ]
              ]
          }
      })
      db.test.createIndex({"location":"2dsphere"})
      
      Show
      use test db.test.insert({ "_id" : ObjectId( "5579e78b6b599f4d7e0ae55e" ), "location" : { "type" : "Polygon" , "coordinates" : [ [ [ -45.0000000000000000, 0.0000000000000000 ], [ -44.8750000000000000, 0.0000000000000000 ], [ -44.8750000000000000, 0.1250000000000000 ], [ -45.0000000000000000, 0.1250000000000000 ], [ -45.0000000000000000, 0.0000000000000000 ] ] ] } }) db.test.createIndex({ "location" : "2dsphere" })
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On Windows servers, I get the following error when trying to create a 2dsphere index in my collection with one document having a specific location coordinate values.

      2015-07-30T16:07:21.524-0300 F GEO      [initandlisten] src\third_party\s2\s2edgeutil.cc:54:  VertexCrossing called with 4 distinct vertices
      2015-07-30T16:07:21.524-0300 I -        [initandlisten] Fatal Assertion 0
      2015-07-30T16:07:22.179-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\util\stacktrace_win.cpp(175)                      mongo::printStackTrace+0x43
      2015-07-30T16:07:22.179-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\util\log.cpp(135)                                 mongo::logContext+0x8f
      2015-07-30T16:07:22.179-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\util\assert_util.cpp(165)                         mongo::fassertFailed+0x77
      2015-07-30T16:07:22.179-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\base\logging.cc(45)                      LogMessageFatal::~LogMessageFatal+0x2c
      2015-07-30T16:07:22.179-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2edgeutil.cc(55)                        S2EdgeUtil::VertexCrossing+0x1dc
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2loop.cc(421)                           S2Loop::Contains+0x1a0
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2loop.cc(629)                           S2Loop::Intersects+0xce
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2loop.cc(407)                           S2Loop::MayIntersect+0x7f
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2polygon.cc(471)                        S2Polygon::MayIntersect+0x67
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2regioncoverer.cc(95)                   S2RegionCoverer::NewCandidate+0x1a
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2regioncoverer.cc(222)                  S2RegionCoverer::GetInitialCandidates+0x142
      2015-07-30T16:07:22.180-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2regioncoverer.cc(255)                  S2RegionCoverer::GetCoveringInternal+0x123
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\third_party\s2\s2regioncoverer.cc(297)                  S2RegionCoverer::GetCovering+0x41
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index\expression_keys_private.cpp(82)          `anonymous namespace'::S2KeysFromRegion+0x3e
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index\expression_keys_private.cpp(122)         `anonymous namespace'::S2GetKeysForElement+0x367
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index\expression_keys_private.cpp(135)         `anonymous namespace'::getS2GeoKeys+0x91
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index\expression_keys_private.cpp(472)         mongo::ExpressionKeysPrivate::getS2Keys+0x337
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index\btree_based_bulk_access_method.cpp(106)  mongo::BtreeBasedBulkAccessMethod::insert+0x7a
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\catalog\index_create.cpp(336)                  mongo::MultiIndexBlock::insert+0x145
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\catalog\index_create.cpp(269)                  mongo::MultiIndexBlock::insertAllDocumentsInCollection+0x594
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index_rebuilder.cpp(127)                       mongo::`anonymous namespace'::checkNS+0x6c6
      2015-07-30T16:07:22.181-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\index_rebuilder.cpp(171)                       mongo::restartInProgressIndexesFromLastShutdown+0x155
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\db.cpp(612)                                    mongo::_initAndListen+0x10da
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\db.cpp(651)                                    mongo::initAndListen+0x27
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\db.cpp(896)                                    mongoDbMain+0x1fe
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] mongod.exe    ...\src\mongo\db\db.cpp(694)                                    wmain+0x35
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] mongod.exe    f:\dd\vctools\crt\crtw32\startup\crt0.c(255)                    __tmainCRTStartup+0x144
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] kernel32.dll                                                                  BaseThreadInitThunk+0xd
      2015-07-30T16:07:22.182-0300 I CONTROL  [initandlisten] 
      2015-07-30T16:07:22.182-0300 I -        [initandlisten] 
      

            Assignee:
            Kevin Albertson
            Reporter:
            Denis Taniguchi
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: