SERVER-19674 Change S2 fatal error to warning