src/third_party/s2/s2edgeutil.cc
@@ -51,7 +51,13 @@ bool S2EdgeUtil::VertexCrossing(S2Point const& a, S2Point const& b,
   if (a == c) return S2::OrderedCCW(S2::Ortho(a), d, b, a);
   if (b == d) return S2::OrderedCCW(S2::Ortho(b), c, a, b);
 
-  S2LOG(DFATAL) << "VertexCrossing called with 4 distinct vertices";
+  // TODO Changing the following to a warning is a workaround fix for SERVER-19674.
+  //
+  // Because ExpensiveCCW is subject to numerical errors there are some
+  // edge cases where this function will be called with 4 distinct
+  // (but with two extremely close) vertices
+  //
+  S2LOG(WARN) << "VertexCrossing called with 4 distinct vertices";
   return false;
 }
 
